@@ -83,7 +83,7 @@ class FlatTable(val records: List[List[String]], val names: List[String]) extend
   def recordScope(recordIndex: Int): ScopedData = new ScopedData("record") {
     override def isEmpty: Boolean = records.isEmpty
     override def findEntries(pred: ((String, String)) => Boolean): Seq[(String, String)] =
-      (("record.number", s"${recordIndex + 1}") :: (names.zip(records(recordIndex).zipWithIndex) flatMap { case (name, (value, nameIndex)) =>
+      ("record.index", s"$recordIndex") :: (("record.number", s"${recordIndex + 1}") :: (names.zip(records(recordIndex).zipWithIndex) flatMap { case (name, (value, nameIndex)) =>
           List((s"name[${nameIndex + 1}]", name), (s"data[$name]", value))
         })).filter(pred)
   }
